# interview-task-cadex

./: CMakeLists.txt  README.md  main.cpp
curves/include/: curves.h
curves/sources/: curves.cpp
